--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -13,6 +17,9 @@
     "jade": "~1.11.0",
     "mongoose": "^4.4.16",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "serve-favicon": "~2.3.0",
+    "webpack": "^1.13.0"
   }
 }
