--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "serve-favicon": "~2.3.0",
+    "superagent": "^2.0.0",
     "webpack": "^1.13.0"
   }
 }
