--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jade": "~1.11.0",
     "mongoose": "^4.4.16",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "serve-favicon": "~2.3.0",
